--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    height: 100%;
+  }
+  
+  body {
+    height: 100%;
+    margin: 0px;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0px;
+    font-weight: normal;
+  }
+  
+
+  @font-face {
+    font-family: circular;
+    src: url(./assets/fonts/Circular/CircularStd-Medium.otf);
+  }
+  @font-face {
+    font-family: circular-light;
+    src: url(./assets/fonts/Circular/CircularStd-Light.otf);
+  }
